--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "sync-images": "node scripts/sync-landing-images.js",
     "serve": "node scripts/serve.js",
     "bundle-sitejs": "esbuild assets/site/entry.js --bundle --format=iife --target=es2018 --sourcemap --tree-shaking=false --outfile=assets/site.js && esbuild assets/site/entry.js --bundle --format=iife --target=es2018 --sourcemap --tree-shaking=false --outfile=web/assets/site.js"
+    ,
+    "audit:html": "node scripts/tools/audit-html-scripts.cjs"
   },
   "backend": "node server/index.js",
   "devDependencies": {
